Added Landing View, Location Authorization, Pull to refresh, UI updates, Update Font Style used, Used actual coordinates for requests

--- a/Yelp Locator/Yelp Locator/Info.plist
+++ b/Yelp Locator/Yelp Locator/Info.plist
@@ -2,11 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location access is required to see nearby businesses</string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Roboto-Regular.ttf</string>
-		<string>Roboto-Light.ttf</string>
-		<string>Roboto-Bold.ttf</string>
+		<string>Montserrat.ttf</string>
+		<string>Montserrat-SemiBold.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
